--- a/Panel/NetworkFilterPanel.html
+++ b/Panel/NetworkFilterPanel.html
@@ -144,13 +144,15 @@
     </div>
       
     </div>
+
   </div>
 
-
+  <center>
+    <a class="waves-effect waves-light btn" id="submitLeakiness" >Submit Leakiness Score</a>
+  </center>
 
 
   <ol class='newspaper network-entries'>
-      <li>Use the website to load up data</li>
   </ol>
   <script src="NetworkFilter.js"></script>
   <script type="text/javascript" src="jquery-2.1.1.min.js"></script>
